--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <link
       rel="icon"
-      href="https://cdn.discordapp.com/avatars/794623460030545981/1af9f8c728b9c346baea0ada6ba5df61.webp?size=1024"
+      href="https://cdn.discordapp.com/avatars/1098041012561125458/11a2fbb7a2b1302758edbb7e85f9d460.webp?size=2048"
     />
     <bgsound src="https://cdn.discordapp.com/attachments/873089654667235348/875760019726008401/chilled-acoustic-indie-folk-instrumental-background-music-for-videos-5720.mp3" loop="infinite">
 
@@ -43,16 +43,16 @@
 
     <meta property="og:type" content="website" />
 
-    <meta property="og:title" content="Mikuni" />
+    <meta property="og:title" content="Astra" />
 
     <meta
       property="og:description"
       content="A simple, multipurpose Discord bot."
     />
 
-    <meta property="og:image" content="https://cdn.discordapp.com/avatars/884467910494535741/bc234bcaa657eb4ecdf8f56a13c9cf9a.png?size=1024"/>
+    <meta property="og:image" content="https://cdn.discordapp.com/avatars/1098041012561125458/11a2fbb7a2b1302758edbb7e85f9d460.webp?size=2048"/>
 
-    <meta name="theme-color" content="#22b4b7" />
+    <meta name="theme-color" content="#c30010" />
   </head>
 
   <body>
@@ -65,7 +65,7 @@
     <nav class="navbar">
       <div class="max-width">
         <div class="logo">
-          <a href="#home">Mikuni<span></span></a>
+          <a href="#home">Astra<span></span></a>
         </div>
 
         <ul class="menu">
@@ -95,7 +95,7 @@
         <div class="home-content">
           <div class="text-1">Hello, my name is</div>
 
-          <div class="text-2">Mikuni</div>
+          <div class="text-2">Astra</div>
 
           <div class="text-3">And I am <span class="typing"></span></div>
 
