--- a/discord.html
+++ b/discord.html
@@ -2,11 +2,11 @@
 <html>
    <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-	    <title>Redirecting you to the vote page...</title>
-	    <meta http-equiv="refresh" content="0.5; URL=https://discord.gg/RyKxBQR7GD" />
+	    <title>Redirecting you to the discord server page...</title>
+	    <meta http-equiv="refresh" content="0.5; URL=https://discord.com/invite/pKjm9SsNE8" />
 			<link rel="icon" href="../images/logo.png">
 	    <meta property="og:type" content="website">
-	    <meta property="og:title" content="Invite Mikuni">
+	    <meta property="og:title" content="Invite Astra">
 	    <meta property="og:description" content="Make your Discord server amazing.">
 	    <meta property="og:image" >
 	    <meta name="theme-color" content="#22b4b7">
